# pawpy

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml
pawpy/: __init__.py  __main__.py  cli.py  config.py  utils.py
pawpy/api/: __init__.py  dashboard.py  rest.py
pawpy/data/: __init__.py  common_passwords.py  updater.py
pawpy/filters/: __init__.py  policy.py
pawpy/generator/: __init__.py  core.py  gpu.py  hybrid.py  sorter.py
pawpy/mutations/: __init__.py  dates.py  keyboard.py  leet.py  mangle.py  markov.py  templates.py
pawpy/profile/: __init__.py  base.py  multi.py
pawpy/profile/plugins/: __init__.py  example.py
pawpy/scoring/: __init__.py  scorer.py
tests/: test_dates.py  test_hybrid.py  test_keyboard.py  test_leet.py  test_mangle.py  test_markov.py  test_policy.py  test_profile.py  test_templates.py
